# rapid-gossip-sync-server

./: .editorconfig  .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: build.yml  docker_build_and_push.yml
docker/: Dockerfile.rgs
processor/: Cargo.toml
processor/src/: config.rs  download.rs  downloader.rs  lib.rs  lookup.rs  main.rs  persistence.rs  router.rs  serialization.rs  snapshot.rs  tracking.rs  types.rs  verifier.rs
res/snapshots/: .gitignore
server/: Cargo.toml
server/src/: main.rs
src/: compression.rs  config.rs  download.rs  downloader.rs  hex_utils.rs  lib.rs  lookup.rs  main.rs  persistence.rs  router.rs  serialization.rs  server.rs  snapshot.rs  tracking.rs  types.rs  verifier.rs
src/sample/: bitcoind_client.rs  cli.rs  convert.rs  disk.rs  hex_utils.rs  mod.rs
src/server/: lookup.rs  mod.rs  serialization.rs  snapshot.rs
src/tests/: mod.rs
