[package]
name = "processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.28.1"
bitcoin-bech32 = "0.12"

lightning = { git ="https://github.com/arik-so/rust-lightning", branch ="graph_sync_crate", features = ["_test_utils"] }
#lightning-block-sync = { git ="https://github.com/arik-so/rust-lightning", branch ="graph_sync_crate", features = [ "rpc-client" ] }
lightning-net-tokio = { git ="https://github.com/arik-so/rust-lightning", branch ="graph_sync_crate" }

#lightning = { path = "/Users/arik/Developer/rust-lightning/lightning", features = ["_test_utils", "std"] }
#lightning-block-sync = { path = "/Users/arik/Developer/rust-lightning/lightning-block-sync", features = [ "rpc-client" ] }
#lightning-invoice = { path = "/Users/arik/Developer/rust-lightning/lightning-invoice", features = ["std"] }
#lightning-net-tokio = { path = "/Users/arik/Developer/rust-lightning/lightning-net-tokio" }
#lightning-persister = { path = "/Users/arik/Developer/rust-lightning/lightning-persister" }
#lightning-background-processor = { path = "/Users/arik/Developer/rust-lightning/lightning-background-processor" }

base64 = "0.13.0"
bech32 = "0.8"
chrono = "0.4"
flate2 = "1.0.22"
futures = "0.3"
hex = "0.3"
#rand = "0.8.4"
rand = "0.4"
serde_json = { version = "1.0" }
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version="0.7.5", features=["with-chrono-0_4"] }
